# python-matchit

./: Cargo.toml  README.md  matchit.pyi  pyproject.toml  test.py
src/: lib.rs
