[package]
name = "python-matchit"
version = "0.2.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "matchit"
crate-type = ["cdylib"]

[dependencies]
matchit = "0.9.1"

[dependencies.pyo3]
version = "0.27.0"
# "abi3-py38" tells pyo3 (and maturin) to build using the stable ABI with minimum Python version 3.8
features = ["abi3-py38"]