[build-system]
requires = ["maturin>=1.11,<2.0"]
build-backend = "maturin"

[project]
name = "python-matchit"
description = "Bindings for matchit rust library."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
maintainers = [
    {name = "Roman Tolkachyov", email = "roman@tolkachyov.name"}
]
license = "MIT"
dynamic = ["version"]
keywords = ["routing", "web", "url", "rust", "matchit", "bindings"]

[project.urls]
github = "https://github.com/romantolkachyov/python-matchit"
releasenotes = "https://github.com/romantolkachyov/python-matchit/releases"
issues = "https://github.com/romantolkachyov/python-matchit/issues"

[dependency-groups]
dev = [
    "maturin>=1.11.5",
    "python-matchit",
]

[tool.uv.workspace]
members = [
    ".",
]

[tool.uv.sources]
python-matchit = { workspace = true }
